# article-view-tracker

./: .env.example  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
api/: throttles.py  urls.py
api/articles/: serializers.py  urls.py  views.py
api/articles/tests/: test_api.py
articles/: admin.py  managers.py  mappers.py  models.py  tasks.py
articles/migrations/: 0001_initial.py
articles/services/: popular_articles.py
articles/tests/: factories.py  test_managers.py  test_services.py
articles/transfer_objects/: articles.py
core/: settings.py
